--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 
 # Node artifact files
 node_modules/
-
+StoryToken-app/src/uploads/*
+!StoryToken-app/src/uploads/.gitkeep
 # Compiled Java class files
 *.class
 
