--- a/StoryToken-app/package.json
+++ b/StoryToken-app/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1"
